# SpeechGeneration

./: .gitignore  .pre-commit-config.yaml  AboutProject.md  Dockerfile  ExperimentProject.md  LICENSE  Makefile  README.md  SetupProject.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: タスク追加.md  不具合報告.md  機能要望.md
configs/: README.md  train.yaml
configs/env/: jsut.yaml  make_env.yaml
configs/experiment/: baseline_random.yaml  example.yaml  for_linear_stacking.yaml  interval100_batch64_collect8k.yaml  mfcc_loss.yaml  random_action-noise0.1.yaml  random_large.yaml
configs/model/: dreamer.yaml  dreamer_latent_error.yaml  linear_stackings.yaml
configs/replay_buffer/: replay_buffer.yaml
configs/trainer/: trainer.yaml
data/: README.md
scripts/: README.md  docker-entrypoint.sh  download_jsut.py  make_random_dataset.py  setup-on-aws.sh  show_num_parameters.py
src/: README.md  test.py  train.py  trainer.py
src/datamodules/: buffer_names.py  replay_buffer.py
src/env/: array_action.py  array_voc_state.py  log_mel_spectrogram.py  make_env.py  normalize_action_range.py
src/models/: dreamer.py  dreamer_latent_error.py
src/models/abc/: _types.py  agent.py  controller.py  observation_auto_encoder.py  prior.py  transition.py  world.py
src/models/components/: agent.py  conformer_decoder_fastspeech2.py  controller.py  linear_layers.py  observation_auto_encoder.py  posterior_encoder.py  posterior_encoder_vits.py  prior_encoder.py  res_layers.py  transition.py  world.py
src/utils/: count_parameters.py  log.py  nets_utils.py  replay_buffer.py  reset_seed.py  visualize.py
src/utils/feats_extract/: log_mel_fbank.py
src/utils/layers/: complex_utils.py  log_mel.py  stft.py
tests/: README.md  test_trainer.py
tests/datamodules/: test_replay_buffer.py
tests/env/: test_array_action.py  test_array_voc_state.py  test_log_mel_spectrogram.py  test_make_env.py  test_normalize_action_range.py
tests/helpers/: paths.py
tests/helpers/feats_extract/: log_mel_fbank.py  test_log_mel_fbank.py
tests/helpers/layers/: complex_utils.py  log_mel.py  stft.py  test_log_mel.py  test_stft.py
tests/models/: test_dreamer.py  test_res_layers.py
tests/scripts/: test_make_random_dataset.py
tests/utils/: test_count_parameters.py  test_replay_buffer.py  test_visualize.py
(+63 files in other folders)
